@@ -58,6 +58,10 @@ div#top		{ width: 200px; margin-left: auto; margin-right: auto; text-align:cente
 		  width: 150px; padding:2px; 
 		}
 
+.warninglong    { font-weight:bold; background-color: #FFFF33; color: #000000 ;
+		  width: 100%; padding:2px; 
+		}
+
 .warningpct	{ font-weight:bold; background-color: #FFFF33; color: #000000 ;
 		  padding:2px; 
 		}
