@@ -1,3 +1,8 @@
+2003-11-19  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b19
+
+	* Moved checkVersions() to util.php, and fixed a logical bug in it.  
+	  Also added some improvements to it's behaviour from HEAD.
+
 2003-11-19 Jens Tkotz <jens@peino.de> 1.4.1-RC4-cvs-b18
 
 	* Bugfix: Change Parameter for check imagemagick to -version.
@@ -10,6 +15,7 @@
 	* Bugfix: Disabled one little translation, because at that time _()
 		  is undefined when PHP has no gettext. To really fix this a
 		  bigger change were needed.
+
 
 2003-11-17  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b16
 
